added new conditions, actions improved reload command